--- a/Es6/Day02/index.html
+++ b/Es6/Day02/index.html
@@ -6,6 +6,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script src="./demo.js"></script>
+		<script type="module" src="./demo.js"></script>
 	</body>
 </html>
